# pints

./: .appveyor.yml  .coveragerc  .error-books  .flake8  .gitignore  .gitmodules  .readthedocs.yaml  .requirement-docs.txt  .requirements-docs.txt  .slow-books  .travis.yml  1.txt  2.txt  CHANGELOG.md  CITATION  CMakeLists.txt  CONTRIBUTING.md  LICENSE  LICENSE.md  LICENSE.txt  MANIFEST.in  README.md  RWM_error_3d_normal_low.csv  True  abc-smc.ipynb  adaptive-pmc-abc.ipynb  adaptive.py  degradation.ipynb  degradation_errors.ipynb  diffev.py  example.py  example_cmaes.py  example_mcmc.py  example_pso.py  example_sampling-abc-rejection.ipynb  example_snes.py  example_xnes.py  ideas_prior.py  kde_ex.ipynb  logistic.ipynb  (+26 more)
.github/PULL_REQUEST_TEMPLATE/: new-method-template.md
.github/workflows/: change-point-tests.yml  copyright-test.yml  coverage-test.yml  docs-test.yml  functional-tests.yml  notebook-interfaces-test.yml  notebook-test.yml  style-test.yml  unit-test-os-coverage.yml  unit-test-python-coverage.yml  unit-tests.yml  upload-to-pypi.yml
doc/: Makefile  problem-statement.tex
docs/: Makefile  make.bat
docs/source/: boundaries.rst  conf.py  core_classes_and_methods.rst  diagnostic_plots.rst  diagnostics.rst  error_measures.rst  function_evaluation.rst  index.rst  io.rst  log_likelihoods.rst  log_pdfs.rst  log_priors.rst  mcmc_diagnostics.rst  noise_generators.rst  noise_model_diagnostics.rst  priors_and_boundaries.rst  (+4 more)
electrochemistry/: CMakeLists.txt  README.md  test.sh
examples/: Differential evolution.ipynb  EXAMPLES.md  Effective sample size.ipynb  Example plots.ipynb  Fitzhugh-MultiTrace.ipynb  Introduction to nested sampling.ipynb  Logistic-ODE-AR1-Stan.ipynb  MCMC+object+sandbox.ipynb  R-hat calculation example.ipynb  README.md  SMC -- working.ipynb  SMC-test.ipynb  Student-t log-likelihood.ipynb  TEST.ipynb  Toy pdfs.ipynb  automatic-differentiation-using-autograd.ipynb  custom-model.ipynb  effective-sample-size.ipynb  emcee hammer.ipynb  emcee-hammer-MCMC.ipynb  emulator-logistic-model.ipynb  inference-adaptive-covariance-mcmc.ipynb  inference-adaptive-mcmc-Copy1.ipynb  inference-adaptive-mcmc-extra-options.ipynb  inference-adaptive-mcmc.ipynb  inference-diagnose-results.ipynb  inference-differential-evolution-mcmc.ipynb  inference-dream-mcmc.ipynb  inference-effective-sample-size.ipynb  inference-first-example.ipynb  inference-metropolis-hasting-mcmc.ipynb  inference-metropolis-mcmc.ipynb  inference-nested-sampling.ipynb  inference-population-mcmc.ipynb  inference-pymc3.ipynb  inference-smc.ipynb  inference-student-t-sampling-error.ipynb  model-comparison-DIC.ipynb  multiplicative_gaussian_noise.ipynb  nested-sampling-example.ipynb  (+133 more)
functional-tests/: README.md  ft_haario_bardenet_mcmc_banana.py  ft_haario_bardenet_mcmc_banana_2.py
html/: hello.html  index.html  pints.json
papers/: README.md  main-pints.bib  used-pints.bib
pints/: __init__.py  _boundaries.py  _cmaes.py  _core.py  _diagnostics.py  _error_measures.py  _evaluation.py  _forward_model.py  _kalman_filter.py  _log_likelihood.py  _log_likelihoods.py  _log_pdfs.py  _log_priors.py  _logger.py  _mcmc.py  _noiseAdders.py  _optimisation.py  _plot.py  _prior.py  _pso.py  _sample_initial_points.py  _score.py  _snes.py  _transformation.py  _util.py  _xnes.py  io.py  mcmc.py  noise.py  plot.py  residuals_diagnostics.py  version
pints/_aboria/: CMakeLists.txt  GaussianProcess.cpp  GaussianProcess.hpp
pints/_gaussian_process/: CMakeLists.txt  GaussianProcess.cpp  GaussianProcess.hpp  GaussianProcess.tcc  GaussianProcessDenseMatrix.hpp  GaussianProcessDenseMatrix.tcc  GaussianProcessDirect.hpp  GaussianProcessDirect.tcc  GaussianProcessH2Matrix.hpp  GaussianProcessH2Matrix.tcc  GaussianProcessMatrixFree.hpp  GaussianProcessMatrixFree.tcc  Kernels.cpp  Kernels.hpp  _gaussian_process.py  python_wrapper.cpp
problems/electrochemistry/: .gitignore  CMakeLists.txt  README.md  example.py  ff  original-tests.py  out.txt  run  run-old  run-tests.sh
problems/electrochemistry/cmake/: FindEigen3.cmake
problems/electrochemistry/electrochemistry/: __init__.py  data.py  models.py
problems/electrochemistry/src/electrochemistry/: seq_electron_transfer3_explicit.hpp  utilities.hpp
problems/electrochemistry/test/: __init__.py  test_basics.py  test_model.py  test_optimisation.py
src/: Data.py  python_wrapper.cpp
studies/: Fitzhugh-Nagumo-Inference.ipynb  Geweke-and-Rubin.ipynb  Hamiltonian Monte Carlo investigation.ipynb  Logistic-ODE-AR1-Stan.ipynb  MCMC+object+sandbox.ipynb  Nested sampling refactoring.ipynb  Notation-and-derivations.ipynb  RWM_error_3d_normal_high.csv  RWM_error_3d_normal_low.csv  RWM_error_6d_normal_high.csv  RWM_error_6d_normal_low.csv  Random Walk Metropolis benchmarks.ipynb  Testing-sampling.ipynb  automatic-kernel-selection.ipynb  diagnostics.ipynb  emulator-logistic-model.ipynb  functional-test-exploration.ipynb  hh-ik-model-analytical-vs-ode.ipynb  logistic_values.csv  multinest.ipynb  problem-statement.ipynb  s_hmc_investigation.nb  s_integrate_out_noise.nb  s_logistic.nb  s_rosenbrock.nb
test/: pints  poonts  sampler_validation.py  shared.py  test_adaptive_mcmc.py  test_ap_model.py  test_boundaries.py  test_cmaes.py  test_constant_model.py  test_differential_evolution_mcmc.py  test_easy_optimisation.py  test_emcee.py  test_error_measures.py  test_evaluators.py  test_fitzhugh_nagumo_model.py  test_fitzhugh_nagumo_models.py  test_goodwin_oscillator_model.py  test_hes1_michaelis_menten_model.py  test_hh_ik_model.py  test_hh_ik_problem.py  test_high_dimensional_normal_logpdf.py  test_hmc_mcmc.py  test_import.py  test_io.py  test_likelihood.py  test_log_likelihoods.py  test_log_posterior.py  test_log_priors.py  test_logger.py  test_logistic_model.py  test_lotka_volterra_model.py  test_mcmc_sampling.py  test_metropolis_hasting_mcmc.py  test_metropolis_mcmc.py  test_multi_output_problem.py  test_multi_series_problem.py  test_multimodal_normal.py  test_multimodal_normal_logpdf.py  test_nested_sampling.py  test_noise.py  (+16 more)
tests/: CMakeLists.txt  tests.py
tutorials/: multinest.ipynb
(+1332 files in other folders)
